src/objects/Account_Team__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_User_36_ID__c</fullName>
        <formula>Account__r.Account_18_ID__c + &apos;-&apos; +  Team_Member__r.User_18_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account User 36 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team</relationshipLabel>
        <relationshipName>Account_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MDM_ID_H3C_Employee_ID__c</fullName>
        <formula>Account__r.MDM_ID__c + &apos;-&apos; + Team_Member__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDM ID-H3C Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID_HPE_Employee_ID__c</fullName>
        <formula>Account__r.MDM_ID__c  + &apos;-&apos; +   Team_Member__r.HPE_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDM ID-HPE Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member_Role__c</fullName>
        <formula>Team_Member__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>客户小组</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Account Team No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>